@@ -22,6 +22,8 @@ AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_INSTALL
 
+AC_PATH_PROG(CP, cp)
+
 AC_PROG_RANLIB
 dnl AC_PROG_LIBTOOL
 
